# dint.lg

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  collection.h  collection.hpp  compact_elias_fano.h  dint.sh  io.h  io.hpp  platform.h  postings_format.h  test_collection.cpp  test_compact_elias_fano.cpp  test_dint.cpp  test_sequence.cpp
cmake/: common.cmake
